--- a/index.html
+++ b/index.html
@@ -25,16 +25,11 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 
 			<div class="content">
 				<div class="grid">
-					<div class="grid__item pos-2"><div class="grid__item-img" style="background-image:url(./img/img2.jpg);" class="hover" ></div></div>
+					<div class="grid__item pos-2"><div class="grid__item-img" style="background-image:url(./img/img6.jpg);" class="hover" ></div></div>
 					<div class="grid__item pos-3"><div class="grid__item-img" style="background-image:url(./img/img2.jpg);" class="hover"></div></div>
 					<div class="grid__item pos-4"><div class="grid__item-img" style="background-image:url(./img/img3.jpg);" class="hover"></div></div>
 					<div class="grid__item pos-1"><div class="grid__item-img" style="background-image:url(./img/img4.jpg);" class="hover"></div></div>
 					<div class="grid__item pos-5"><div class="grid__item-img" style="background-image:url(./img/img5.jpg);" class="hover"></div></div>
-					<div class="grid__item pos-6"><div class="grid__item-img" style="background-image:url(./img/img6.jpg);" class="hover"></div></div>
-					<div class="grid__item pos-7"><div class="grid__item-img" style="background-image:url(./img/img7.jpg);" class="hover"></div></div>
-					<div class="grid__item pos-8"><div class="grid__item-img" style="background-image:url(./img/img8.jpg);" class="hover"></div></div>
-					<div class="grid__item pos-9"><div class="grid__item-img" style="background-image:url(./img/img9.jpg);" class="hover"></div></div>
-					<div class="grid__item pos-10"><div class="grid__item-img" style="background-image:url(./img/img10.jpg);" class="hover"></div></div>
 				</div>
                 <h2 class="content__title no-select">
 					<span>Love</span>
@@ -43,7 +38,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 					<span class="content__title-sub">Chúc Lùn Yêu 8/3 xinh đẹp vui vẻ ♥</span>
 				</h2>
 				<h2 class=" content__title no-select" style="margin-top:45px;">
-					<a href="#" class="content__title-sub">Bấm vào đây đi ♥</span>
+					<a href="https://devlongvu.github.io/yeulun/" class="content__title-sub">Bấm vào đây đi ♥</span>
 				</h2>
 				
 			</div>
